Added solarthing command and path_update.sh. Fixed NPE when no arguments supplied